[gd_scene load_steps=8 format=3 uid="uid://i5my6arf6jgs"]

[ext_resource type="Script" path="res://Scripts/card_display.gd" id="1_dfdbt"]
[ext_resource type="Texture2D" uid="uid://bmw6l2k81eycp" path="res://Assets/carta.png" id="1_iuo3g"]
[ext_resource type="Texture2D" uid="uid://doq8f21sb0iju" path="res://Assets/IMAGEM DE TESTES.png" id="3_ydi7s"]

[sub_resource type="LabelSettings" id="LabelSettings_lutgg"]
line_spacing = -5.0
font_size = 9
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_wj0ox"]
line_spacing = -5.0
font_size = 10
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_qxxii"]
font_size = 12
font_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vppwt"]
size = Vector2(180, 233.333)

[node name="CardDisplay" type="TextureRect"]
custom_minimum_size = Vector2(186, 235)
anchors_preset = -1
anchor_left = -0.00347227
anchor_top = 0.00154321
anchor_right = 0.157986
anchor_bottom = 0.388642
offset_left = 4.0
offset_top = 2.00002
offset_right = 4.0
offset_bottom = -13.84
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 1.08)
mouse_filter = 2
texture = ExtResource("1_iuo3g")
expand_mode = 1
script = ExtResource("1_dfdbt")
metadata/_edit_use_anchors_ = true

[node name="imagem" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.152318
anchor_top = 0.223359
anchor_right = 0.84916
anchor_bottom = 0.578144
offset_top = 0.219429
offset_right = 3.05176e-05
offset_bottom = 0.219391
texture = ExtResource("3_ydi7s")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Nome_da_carta" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.172186
anchor_top = 0.046764
anchor_right = 0.821194
anchor_bottom = 0.157875
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Nome_da_carta"
label_settings = SubResource("LabelSettings_lutgg")
horizontal_alignment = 1
autowrap_mode = 2
justification_flags = 35
max_lines_visible = 3
metadata/_edit_use_anchors_ = true

[node name="Descrição_do_acontecimento" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0927155
anchor_top = 0.580808
anchor_right = 0.880797
anchor_bottom = 0.833334
offset_top = 3.05176e-05
offset_bottom = 3.05176e-05
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Descrição"
label_settings = SubResource("LabelSettings_wj0ox")
autowrap_mode = 2
clip_text = true
max_lines_visible = 5
metadata/_edit_use_anchors_ = true

[node name="Ano" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.295699
anchor_top = 0.847236
anchor_right = 0.7561
anchor_bottom = 0.919347
offset_top = -0.0263977
offset_right = -1.52588e-05
offset_bottom = 0.0274658
text = "Ano"
label_settings = SubResource("LabelSettings_qxxii")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Carta" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Carta"]
position = Vector2(93.0001, 117.593)
shape = SubResource("RectangleShape2D_vppwt")

[node name="Tags" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 42.0001
offset_top = 198.148
offset_right = 143.0
offset_bottom = 221.148
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 13
text = "tags"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Carta" to="." method="_on_carta_mouse_entered"]
[connection signal="mouse_exited" from="Carta" to="." method="_on_carta_mouse_exited"]
